# RPGMaker-Tauri

./: README.md  package-lock.json  package.json
.github/workflows/: build.yml  release.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/external_localhost_plugin/: mod.rs
