[package]
name = "tauri_rpgmaker-launcher"
version = "1.0.0"
description = "A Tauri Launcher for RPG-Maker games"
authors = ["Charlie's Boyfriend"]
edition = "2021"

[lib]
name = "tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2.0", features = ["devtools"] }
tauri-plugin-opener = "2.0"
portpicker = "0.1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.142"
tiny_http = "0.12"
http = "1.3.1"
percent-encoding = "2.3"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }